crates/rlm-derive/tests/ui/enum_not_supported.stderr
error: rlm_type currently supports named structs only
 --> tests/ui/enum_not_supported.rs:4:6
  |
4 | enum BadEnum {
  |      ^^^^^^^
