crates/rlm-derive/tests/ui/enum_not_supported.rs
use rlm_derive::rlm_type;

#[rlm_type]
enum BadEnum {
    A,
}

fn main() {}
